<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_newgame"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_newgame" />
        <item
            android:id="@+id/nav_previousgame"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_previousgame" />
        <item
            android:id="@+id/nav_allgames"
            android:icon="@drawable/trophy"
            android:title="@string/menu_allgames" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/map"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/growth"
            android:title="@string/menu_statistics" />
    </group>
</menu>
