<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ck.edu.com.soccerproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="ck.edu.com.soccerproject.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_newgame"
        android:name="ck.edu.com.soccerproject.ui.newgame.NewgameFragment"
        android:label="@string/menu_newgame"
        tools:layout="@layout/fragment_newgame" />

    <fragment
        android:id="@+id/nav_previousgame"
        android:name="ck.edu.com.soccerproject.ui.previousgame.PreviousgameFragment"
        android:label="@string/menu_previousgame"
        tools:layout="@layout/fragment_previousgame" />

    <fragment
        android:id="@+id/nav_allgames"
        android:name="ck.edu.com.soccerproject.ui.allgames.AllgamesFragment"
        android:label="@string/menu_allgames"
        tools:layout="@layout/fragment_allgames" />

    <fragment
        android:id="@+id/nav_locations"
        android:name="ck.edu.com.soccerproject.ui.locations.LocationsFragment"
        android:label="@string/menu_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="ck.edu.com.soccerproject.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" >
        <action
            android:id="@+id/action_nav_statistics_to_nav_home_second"
            app:destination="@id/nav_home_second" />
    </fragment>
</navigation>