<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newgame.NewgameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_newgame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:text="@string/fragment_newgame"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.048" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/label_oppenent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_opponent"/>

            <EditText
                android:id="@+id/edit_oppenent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/label_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_date"/>

            <EditText
                android:id="@+id/edit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/label_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_score"/>

            <EditText
                android:id="@+id/edit_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/label_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_location"/>

            <EditText
                android:id="@+id/edit_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </LinearLayout>
        <ImageButton
            android:id="@+id/button_addData"
            android:layout_width="65dp"
            android:layout_height="58dp"
            android:src="@android:drawable/ic_input_add"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="421dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>